force-app/main/default/objects/Patient__c/fields/AI_Value__c.field-meta.xml
<CustomField>
    <fullName>AI_Value__c</fullName>
    <label>AI Value</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>