force-app/main/default/objects/Patient__c/fields/AI_Value_predicted__c.field-meta.xml
<CustomField>
    <fullName>AI_Value_predicted__c</fullName>
    <label>Ai value predicted</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>