force-app/main/default/objects/Patient__c/fields/Blood_Pressure__c.field-meta.xml
<CustomField>
    <fullName>Blood_Pressure__c</fullName>
    <description>Format: &quot;120/80&quot; (Systolic/Diastolic)</description>
    <label>Blood Pressure</label>
    <length>20</length>
    <type>Text</type>
</CustomField>