force-app/main/default/objects/Patient__c/fields/Body_Temperature__c.field-meta.xml
<CustomField>
    <fullName>Body_Temperature__c</fullName>
    <description>e.g., 98.6°F</description>
    <label>Body Temperature</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>