force-app/main/default/objects/Patient__c/fields/Chronic_Kidney_Disease_Flag__c.field-meta.xml
<CustomField>
    <fullName>Chronic_Kidney_Disease_Flag__c</fullName>
    <description>CKD Status</description>
    <label>Chronic Kidney Disease Flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>