force-app/main/default/objects/Patient__c/fields/Diabetes_Flag__c.field-meta.xml
<CustomField>
    <fullName>Diabetes_Flag__c</fullName>
    <description>Diabetes Yes/No</description>
    <label>Diabetes Flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>