force-app/main/default/objects/Patient__c/fields/Emergency_Visit_Last_30_Days__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Visit_Last_30_Days__c</fullName>
    <label>Emergency Visit Last 30 Days</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>