force-app/main/default/objects/Patient__c/fields/Existing_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Existing_Conditions__c</fullName>
    <description>Chronic Illnesses like Diabetes, etc.</description>
    <label>Existing Conditions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>