force-app/main/default/objects/Patient__c/fields/Final_Predicted_Risk_Label__c.field-meta.xml
<CustomField>
    <fullName>Final_Predicted_Risk_Label__c</fullName>
    <formula>IF(
  NOT(ISBLANK(AI_Value__c)),
    IF(AI_Value__c&lt;= 3, &quot;Low&quot;,
      IF(AI_Value__c&lt;= 7, &quot;Medium&quot;, &quot;High&quot;)),
    IF(Risk_Score__c &lt;= 3, &quot;Low&quot;,
      IF(Risk_Score__c &lt;= 7, &quot;Medium&quot;, &quot;High&quot;))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Predicted Risk Label</label>
    <type>Text</type>
</CustomField>