force-app/main/default/objects/Patient__c/fields/Oxygen_Saturation__c.field-meta.xml
<CustomField>
    <fullName>Oxygen_Saturation__c</fullName>
    <description>SpO2 (%)</description>
    <label>Oxygen Saturation</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>