force-app/main/default/objects/Patient__c/fields/Patient_ID__c.field-meta.xml
<CustomField>
    <fullName>Patient_ID__c</fullName>
    <description>Unique Patient Identifier</description>
    <label>Patient ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>