force-app/main/default/objects/Patient__c/fields/Prior_Hospitalizations__c.field-meta.xml
<CustomField>
    <fullName>Prior_Hospitalizations__c</fullName>
    <label>Prior Hospitalizations</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>