force-app/main/default/objects/Patient__c/fields/Smoking_Status__c.field-meta.xml
<CustomField>
    <fullName>Smoking_Status__c</fullName>
    <description>Smoking Habit</description>
    <label>Smoking Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>Former</fullName>
            </value>
            <value>
                <fullName>Never</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>