force-app/main/default/objects/Patient__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Patient_ID__c</columns>
    <columns>AI_Value_predicted__c</columns>
    <columns>Risk_Score__c</columns>
    <columns>Existing_Conditions__c</columns>
    <columns>Symptoms__c</columns>
    <columns>Final_Predicted_Risk_Label__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>